Added script for techStack buttons fetching. Added svgs. Minor design updates and improvements

--- a/index.html
+++ b/index.html
@@ -191,440 +191,24 @@
             <div id="techStack1">
               <div class="smallBlock">
                 <h3 class="inBlockTitles">Software Development:</h3>
-                <!--
-          <button
-            class="secondaryButtons"
-            title="What is HTML?"
-            onclick="window.location.href='https://html.com/#What_is_HTML';"
-          >
-            <img
-              src="assets/images/Tech Stack/html.svg"
-              title="HTML Logo"
-              width="25rem"
-              height="25rem"
-              alt="HTML Logo"
-            />
-            HTML
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is CSS?"
-            onclick="window.location.href='https://www.w3.org/Style/CSS/Overview.en.html';"
-          >
-            <img
-              src="assets/images/Tech Stack/css.svg"
-              title="CSS Logo"
-              width="25rem"
-              height="25rem"
-              alt="CSS Logo"
-            />
-            CSS
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is JavaScript"
-            onclick="window.location.href='https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript';"
-          >
-            <img
-              src="assets/images/Tech Stack/javascript.svg"
-              title="JavaScript Logo"
-              width="20rem"
-              height="20rem"
-              alt="JavaScript Logo"
-            />
-            JavaScript
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is C++?"
-            onclick="window.location.href='https://www.w3schools.com/cpp/cpp_intro.asp';"
-          >
-            <img
-              src="assets/images/Tech Stack/c++.svg"
-              title="C++ Logo"
-              width="25rem"
-              height="25rem"
-              alt="C++ Logo"
-            />
-            C++
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is Dart?"
-            onclick="window.location.href='https://dart.dev/overview';"
-          >
-            <img
-              src="assets/images/Tech Stack/dart.svg"
-              title="Dart Logo"
-              width="20rem"
-              height="20rem"
-              alt="Dart Logo"
-            />
-            Dart
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is Python?"
-            onclick="window.location.href='https://docs.python.org/3/faq/general.html#what-is-python';"
-          >
-            <img
-              src="assets/images/Tech Stack/python.svg"
-              title="Python Logo"
-              width="25rem"
-              height="25rem"
-              alt="Python Logo"
-            />
-            Python
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is MATLAB?"
-            onclick="window.location.href='https://www.mathworks.com/products/matlab.html';"
-          >
-            <img
-              src="assets/images/Tech Stack/matlab.svg"
-              title="MATLAB Logo"
-              width="25rem"
-              height="25rem"
-              alt="MATLAB Logo"
-            />
-            MATLAB
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is SQL?"
-            onclick="window.location.href='https://aws.amazon.com/what-is/sql/';"
-          >
-            <img
-              src="assets/images/Tech Stack/sql.svg"
-              title="SQL Logo"
-              width="25rem"
-              height="25rem"
-              alt="SQL Logo"
-            />
-            SQL
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-          -->
-              </div>
-
-              <div class="smallBlock">
-                <h3 class="inBlockTitles">Data Analysis:</h3>
-                <!--
-          <button
-            class="secondaryButtons"
-            title="What is Visual Studio Code?"
-            onclick="window.location.href='https://code.visualstudio.com/docs/supporting/faq';"
-          >
-            <img
-              src="assets/images/Tech Stack/visualStudioCode.svg"
-              title="Visual Studio Code Logo"
-              width="20rem"
-              height="20rem"
-              alt="Visual Studio Code Logo"
-            />
-            Visual Studio Code
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is GitHub?"
-            onclick="window.location.href='https://docs.github.com/en/get-started/quickstart/hello-world';"
-          >
-            <img
-              src="assets/images/Tech Stack/githubSocialMedia.svg"
-              title="GitHub Logo"
-              width="20rem"
-              height="20rem"
-              alt="GitHub Logo"
-            />
-            GitHub
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is Android Studio?"
-            onclick="window.location.href='https://developer.android.com/studio/intro';"
-          >
-            <img
-              src="assets/images/Tech Stack/androidStudio.svg"
-              title="Android Studio Logo"
-              width="25rem"
-              height="25rem"
-              alt="Android Studio Logo"
-            />
-            Android Studio
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is Visual Studio?"
-            onclick="window.location.href='https://visualstudio.microsoft.com/#vs-section';"
-          >
-            <img
-              src="assets/images/Tech Stack/visualStudio.svg"
-              title="Visual Studio Logo"
-              width="20rem"
-              height="20rem"
-              alt="Visual Studio Logo"
-            />
-            Visual Studio
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is Arduino?"
-            onclick="window.location.href='https://www.arduino.cc/en/Guide/Introduction';"
-          >
-            <img
-              src="assets/images/Tech Stack/arduinoTechStack.svg"
-              title="Arduino Logo"
-              width="25rem"
-              height="25rem"
-              alt="Arduino Logo"
-            />
-            Arduino
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What are Jupyter Notebooks?"
-            onclick="window.location.href='https://jupyter-notebook.readthedocs.io/en/stable/';"
-          >
-            <img
-              src="assets/images/Tech Stack/Jupyter.svg"
-              title="Jupyter Notebook Logo"
-              width="25rem"
-              height="25rem"
-              alt="Jupyter Notebook Logo"
-            />
-            Jupyter Notebook
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is Raspberry Pi"
-            onclick="window.location.href='https://www.raspberrypi.com/for-home/';"
-          >
-            <img
-              src="assets/images/Tech Stack/raspberryPi.svg"
-              title="Raspberry Pi Logo"
-              width="20rem"
-              height="20rem"
-              alt="Raspberry Pi Logo"
-            />
-            Raspberry Pi
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is VirtualBox?"
-            onclick="window.location.href='https://www.virtualbox.org/wiki/VirtualBox';"
-          >
-            <img
-              src="assets/images/Tech Stack/virtualbox.svg"
-              title="VirtualBox Logo"
-              width="25rem"
-              height="25rem"
-              alt="VirtualBox Logo"
-            />
-            VirtualBox
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-          -->
-              </div>
-            </div>
-            <div id="techStack2">
-              <div class="smallBlock">
-                <h3 class="inBlockTitles">Hardware:</h3>
-                <!--
-          <button
-            class="secondaryButtons"
-            title="What is Bootstrap?"
-            onclick="window.location.href='https://www.w3schools.com/whatis/whatis_bootstrap.asp';"
-          >
-            <img
-              src="assets/images/Tech Stack/bootstrap.svg"
-              title="Bootstrap Logo"
-              width="25rem"
-              height="25rem"
-              alt="Bootstrap Logo"
-            />
-            Bootstrap
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is Django?"
-            onclick="window.location.href='https://www.djangoproject.com/';"
-          >
-            <img
-              src="assets/images/Tech Stack/django.svg"
-              title="Django Logo"
-              width="17.5rem"
-              height="17.5rem"
-              alt="Django Logo"
-            />
-            Django
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-
-          <button
-            class="secondaryButtons"
-            title="What is Flutter?"
-            onclick="window.location.href='https://flutter.dev/';"
-          >
-            <img
-              src="assets/images/Tech Stack/flutter.svg"
-              title="Flutter Logo"
-              width="20rem"
-              height="20rem"
-              alt="Flutter Logo"
-            />
-            Flutter
-            <img
-              src="assets/images/Icons/info.svg"
-              title="Info"
-              width="25rem"
-              height="25rem"
-              alt="More Info Button"
-            />
-          </button>
-          -->
+                <div id="software-development"></div>
               </div>
 
               <div class="smallBlock">
                 <h3 class="inBlockTitles">Project Management & Other Tools:</h3>
+                <div id="pm-and-others"></div>
+              </div>
+            </div>
+
+            <div id="techStack2">
+              <div class="smallBlock">
+                <h3 class="inBlockTitles">Hardware:</h3>
+                <div id="hardware"></div>
+              </div>
+
+              <div class="smallBlock">
+                <h3 class="inBlockTitles">Data Analysis:</h3>
+                <div id="data-analysis"></div>
               </div>
             </div>
           </div>
@@ -971,6 +555,7 @@
     <script src="scripts/modules/themeChangerButton.js"></script>
     <script src="scripts/modules/menuButton.js"></script>
     <script src="scripts/modules/animationsOnScroll.js"></script>
+    <script src="scripts/modules/techStackFetch.js"></script>
     <script src="scripts/modules/contactForm.js"></script>
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
   </body>
