Minor design changes and improvements

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
               onclick="window.location.href='https://github.com/jadnell555';"
             >
               <img
-                src="assets/images/Tech Stack/githubSocialMedia.svg"
+                src="assets/images/Tech Stack/github.svg"
                 title="GitHub"
                 width="40px"
                 height="40px"
