Minor design change

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
             <button
               class="socialMediaButton"
               type="button"
-              onclick="window.location.href='https://www.linkedin.com/in/jadnell-h-reyes-perez-301687280';"
+              onclick="window.location.href='www.linkedin.com/in/jadnellreyes';"
             >
               <img
                 src="assets/images/Social Media/linkedin.svg"
