--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
           <div id="landing2">
             <div id="intro">
-              <h1>Hello World! I'm Jadnell H. Reyes Perez</h1>
+              <h1>Hello World! I'm Jadnell H. Reyes Pérez</h1>
 
               <h3>Computer Engineer</h3>
             </div>
