Improving individual project template

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Jadnell H. Reyes Pérez -->
-<!-- February 24th 2025 -->
+<!-- February 25th 2025 -->
 <!-- Version: 1.5 (in progress...) -->
 <?xml version = "1.0"?>
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
@@ -225,6 +225,7 @@
             college projects to professional ones.
           </p>
         </div>
+
         <div class="projectContainer">
           <div class="projectContainer1">
             <div class="pictureWrapper">
@@ -236,6 +237,7 @@
               />
             </div>
           </div>
+          <div id="projectGoBack"></div>
           <div class="projectContainer2">
             <div>
               <h2 class="projectTitle">DEPO Web Application:</h2>
@@ -252,7 +254,7 @@
 
             <div class="primaryButtons">
               <button
-                onclick="window.location.href='/jadnell555.github.io/Projects/depoProject.html';"
+                onclick="window.location.href='pages/projects/depoProject.html';"
                 title="More details about the DEPO Web App"
               >
                 More Details:
@@ -399,7 +401,7 @@
     </section>
     <!-- CONTACT INFORMATION SECTION -->
     <section id="contactSection">
-      <div class="wrapper animatedSection">
+      <div class="animatedSection">
         <div class="HEADINGS"><h1>CONTACT</h1></div>
         <div class="headingsDescriptions">
           <p>
@@ -469,7 +471,7 @@
       </div>
     </section>
     <section id="socialMediaSection">
-      <div class="wrapper animatedSection">
+      <div class="animatedSection">
         <h3 id="socialMediaHeading">Social Media:</h3>
 
         <ul id="socialMediaItems">
