Minor design fix

--- a/pages/projects/depoProject.html
+++ b/pages/projects/depoProject.html
@@ -228,7 +228,7 @@
               onclick="window.location.href='https://www.instagram.com/j_dnll/';"
             >
               <img
-                src="../../assets/images/Social Media/instagram.svg"
+                src="../../assets/images/socialMedia/instagram.svg"
                 title="Instagram"
                 width="35px"
                 height="35px"
@@ -243,7 +243,7 @@
               onclick="window.location.href='https://www.x.com/jadnellReyes';"
             >
               <img
-                src="../../assets/images/Social Media/x.svg"
+                src="../../assets/images/socialMedia/x.svg"
                 title="X"
                 width="30px"
                 height="30px"
@@ -258,7 +258,7 @@
               onclick="window.location.href='https://github.com/jadnell555';"
             >
               <img
-                src="../../assets/images/Tech Stack/github.svg"
+                src="../../assets/images/techStack/github.svg"
                 title="GitHub"
                 width="40px"
                 height="40px"
@@ -273,7 +273,7 @@
               onclick="window.location.href='www.linkedin.com/in/jadnellreyes';"
             >
               <img
-                src="../../assets/images/Social Media/linkedin.svg"
+                src="../../assets/images/socialMedia/linkedin.svg"
                 title="LinkedIn"
                 width="35px"
                 height="35px"
