Minor design change

--- a/pages/projects/projectDetailsTemplate.html
+++ b/pages/projects/projectDetailsTemplate.html
@@ -40,7 +40,7 @@
           <button
             id="goBackButton"
             type="button"
-            onclick="window.location.href='../../index.html#projectGoBack'"
+            onclick="window.location.href='../../index.html#projectsSection'"
           >
             <img
               src="../../assets/images/icons/goBack.svg"
