Added tech stack fetching for each project. Minor design changes and bug fixes

--- a/pages/projects/projectDetailsTemplate.html
+++ b/pages/projects/projectDetailsTemplate.html
@@ -146,7 +146,9 @@
         </div>
 
         <div class="projectDetailsTitle">Technologies Implemented:</div>
+        <div class="techStackImplemented"></div>
         <!-- Technologies section can be added dynamically if included in your JSON -->
+        <div id="techStackContainer"></div>
 
         <div class="projectDetailsTitle">Images:</div>
         <div class="slideshow-container">
