Minor design fix

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     </section>
     <!-- CONTACT INFORMATION SECTION -->
     <section id="contactSection">
-      <div class="animatedSection">
+      <div class="wrapper animatedSection">
         <div class="HEADINGS"><h1>CONTACT</h1></div>
         <div class="headingsDescriptions">
           <p>
