Minor design changes, bug fixes and improvements

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="pictureWrapper">
               <img
                 id="mainPicture"
-                src="assets/images/pictures/ME.png"
+                src="assets/images/pictures/ME.webp"
                 title="Hello! This is me"
                 alt="A picture of Jadnell Reyes was supposed to appear here..."
               />
