Added comments to projectDetailsTemplate.

--- a/pages/projects/projectDetailsTemplate.html
+++ b/pages/projects/projectDetailsTemplate.html
@@ -1,4 +1,7 @@
-<!-- project-details.html -->
+<!-- Jadnell H. Reyes Pérez -->
+<!-- March 3rd, 2025 -->
+<!-- Version: 1.5 -->
+<!-- Project Details Template -->
 <?xml version = "1.0"?>
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
@@ -25,7 +28,7 @@
     <meta
       name="description"
       content="This webpage contains information about Jadnell Reyes, 
-    a Puerto Rican Computer Engineering Graduate"
+    a Puerto Rican Computer Engineer. Specifically a project he worked on."
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -34,6 +37,7 @@
   </head>
 
   <body>
+    <!-- Navigation Bar-->
     <div id="newNavBar">
       <div id="navBarWrapper">
         <div id="menu">
@@ -68,6 +72,7 @@
         </div>
       </div>
     </div>
+    <!--Navigation Bar Items-->
     <div id="navBarItemsLarge">
       <ul id="navBarItems" class="hide">
         <li class="navBarItem">
@@ -87,24 +92,30 @@
         </li>
       </ul>
     </div>
+    <!--End Navigation Bar-->
 
-    <section id="depoProjectSection" class="animatedSection leftSlide">
+    <!-- PROJECT SECTION -->
+    <section class="animatedSection leftSlide">
       <div class="wrapper">
+        <!-- Project Title -->
         <div class="HEADINGS">
           <h1>Project Title</h1>
         </div>
         <br />
 
+        <!-- Project Source Code & Youtube Link (When available) -->
         <div class="sourceVideo"></div>
 
+        <!-- Project Description -->
         <div class="projectDetailsTitle">Project Description:</div>
 
         <div class="smallBlock">
           <p class="projectDescription">
-            Project description will be loaded dynamically.
+            <!-- Description will be added dynamically -->
           </p>
         </div>
 
+        <!-- Project Type and Status -->
         <div class="typeStatus">
           <div class="projectWrapper">
             <div class="projectDetailsTitle">Type of Project:</div>
@@ -124,22 +135,23 @@
           </div>
         </div>
 
+        <!-- Project Tech Stack -->
         <div class="projectDetailsTitle">Technologies Implemented:</div>
-        <div class="techStackImplemented"></div>
-        <!-- Technologies section can be added dynamically if included in your JSON -->
         <div id="techStackContainer"></div>
-
+        <!-- Tech stack will be added dynamically -->
+        <!-- Project Images -->
         <div class="projectDetailsTitle">Images:</div>
         <div class="slideshow-container">
           <!-- Images will be added dynamically -->
         </div>
 
-        <div id="imageDots1">
+        <div id="imageDots">
           <!-- Dots will be added dynamically -->
         </div>
       </div>
     </section>
 
+    <!-- SOCIAL MEDIA SECTION -->
     <section id="socialMediaSection">
       <div class="animatedSection">
         <h3 id="socialMediaHeading">Social Media:</h3>
@@ -208,7 +220,8 @@
         </ul>
       </div>
     </section>
-    <!-- end contact section-->
+
+    <!-- END SOCIAL MEDIA SECTION -->
     <footer>
       <div class="wrapper animatedSection">
         <p>
