Added comments to index.html.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta
       name="description"
       content="This webpage contains information about Jadnell Reyes, 
-    a Puerto Rican Computer Engineering Graduate"
+    a Puerto Rican Computer Engineer."
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -43,6 +43,7 @@
   </head>
 
   <body>
+    <!-- Navigation Bar -->
     <div id="newNavBar">
       <div id="navBarWrapper">
         <div id="menu">
@@ -73,6 +74,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Navigation Bar Items -->
     <div id="navBarItemsLarge">
       <ul id="navBarItems" class="hide">
         <li class="navBarItem">
@@ -86,6 +89,8 @@
         </li>
       </ul>
     </div>
+    <!-- End Navigation Bar -->
+
     <!-- LANDING SECTION -->
     <section id="landingSection">
       <div class="wrapper animatedSection">
@@ -139,6 +144,7 @@
           </p>
         </div>
         <div id="aboutMe">
+          <!-- Education -->
           <div id="educationLarge">
             <h2 class="blockTitles">Education:</h2>
             <div id="education">
@@ -185,6 +191,8 @@
               </div>
             </div>
           </div>
+
+          <!-- Tech Stack -->
           <div id="techStackLarge">
             <h2 class="blockTitles">Tech Stack:</h2>
 
@@ -215,6 +223,8 @@
         </div>
       </div>
     </section>
+    <!-- END ABOUT ME SECTION-->
+
     <!-- PROJECTS SECTION -->
     <section id="projectsSection">
       <div class="wrapper animatedSection">
@@ -228,7 +238,9 @@
         <div id="projectsContainer"></div>
       </div>
     </section>
-    <!-- CONTACT INFORMATION SECTION -->
+    <!-- END PROJECTS SECTION -->
+
+    <!-- CONTACT SECTION -->
     <section id="contactSection">
       <div class="wrapper animatedSection">
         <div class="HEADINGS"><h1>CONTACT</h1></div>
@@ -239,6 +251,8 @@
           </p>
         </div>
         <br />
+
+        <!-- Contact Form -->
         <div id="contactForm">
           <div class="smallBlock">
             <h2 class="blockTitles">Message Me:</h2>
@@ -299,6 +313,9 @@
         </div>
       </div>
     </section>
+    <!-- END CONTACT SECTION -->
+
+    <!-- SOCIAL MEDIA SECTION -->
     <section id="socialMediaSection">
       <div class="animatedSection">
         <h3 id="socialMediaHeading">Social Media:</h3>
@@ -367,7 +384,8 @@
         </ul>
       </div>
     </section>
-    <!-- end contact section-->
+    <!-- END SOCIAL MEDIA SECTION-->
+
     <footer>
       <div class="wrapper animatedSection">
         <p>
