Added an icon to the website.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       rel="stylesheet"
     />
 
+    <link rel="icon" href="assets/images/pictures/ME.ico" type="image/x-icon" />
+
     <meta
       name="description"
       content="This webpage contains information about Jadnell Reyes, 
