--- a/index.html
+++ b/index.html
@@ -398,10 +398,10 @@
     </footer>
 
     <!-- SCRIPTS -->
-    <script src="scripts/modules/themeChangerButton.js"></script>
+    <script type="module" src="scripts/modules/themeChangerButton.js"></script>
+    <script type="module" src="scripts/modules/techStackFetch.js"></script>
     <script src="scripts/modules/menuButton.js"></script>
     <script src="scripts/modules/animationsOnScroll.js"></script>
-    <script src="scripts/modules/techStackFetch.js"></script>
     <script src="scripts/modules/contactForm.js"></script>
     <script src="scripts/modules/projectFetch.js"></script>
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
