Removing unused files and renamed design to style

--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
     />
 
     <!-- Stylesheet Link -->
-    <link
-      id="theme"
-      href="styles/lightDesign_v1.5.css"
-      type="text/css"
-      rel="stylesheet"
-    />
+    <link id="theme" href="styles/style.css" type="text/css" rel="stylesheet" />
 
     <link rel="icon" href="assets/images/pictures/ME.ico" type="image/x-icon" />
 
