--- a/pages/projects/projectDetailsTemplate.html
+++ b/pages/projects/projectDetailsTemplate.html
@@ -20,7 +20,7 @@
     <!-- Stylesheet Link-->
     <link
       id="theme"
-      href="../../styles/lightDesign_v1.5.css"
+      href="../../styles/style.css"
       type="text/css"
       rel="stylesheet"
     />
