Minor design changes and bug fixes.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Jadnell Reyes' Portfolio</title>
+    <title>Jadnell Haresh's Portfolio</title>
   </head>
 
   <body>
@@ -258,7 +258,6 @@
               action="https://send.pageclip.co/CAH0P5X4x3AsDEPAqnhl4MqM62FY8Ndd/contactForm"
               class="pageclip-form form"
               method="post"
-              onsubmit="return validateName()"
             >
               <div id="fullName">
                 <input
@@ -393,8 +392,8 @@
     </footer>
 
     <!-- SCRIPTS -->
-    <script type="module" src="scripts/modules/themeChangerButton.js"></script>
-    <script type="module" src="scripts/modules/techStackFetch.js"></script>
+    <script src="scripts/modules/themeChangerButton.js"></script>
+    <script src="scripts/modules/techStackFetch.js"></script>
     <script src="scripts/modules/menuButton.js"></script>
     <script src="scripts/modules/animationsOnScroll.js"></script>
     <script src="scripts/modules/contactForm.js"></script>
