--- a/pages/projects/projectDetailsTemplate.html
+++ b/pages/projects/projectDetailsTemplate.html
@@ -35,7 +35,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Project Details - Jadnell Reyes' Portfolio</title>
+    <title>Project Details - Jadnell Haresh's Portfolio</title>
   </head>
 
   <body>
