Modified projects overviews and descriptions; and landing page intro.

--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
             </div>
 
             <div class="smallBlock">
-              A Full Stack Web Developer, Designer and Engineer graduated from
-              the Polytechnic University of Puerto Rico. Keep scrolling or press
-              the button below to learn about the technologies & hardware I have
-              experience on, projects and more.
+              A Full Stack Web Developer, Designer, and Software Engineer
+              passionate about creating innovative solutions. Graduated from the
+              Polytechnic University of Puerto Rico, I invite you to explore my
+              portfolio to witness my capabilities in web development, design,
+              hardware and other projects.
             </div>
 
             <div class="primaryButtons">
@@ -135,10 +136,7 @@
       <div class="wrapper animatedSection">
         <div class="HEADINGS"><h1>ABOUT ME</h1></div>
         <div class="headingsDescriptions">
-          <p>
-            Here you can learn about my educational background, and my
-            familiarity with various tools and software.
-          </p>
+          <p>Here you can learn about my education, and technical skills.</p>
         </div>
         <div id="aboutMe">
           <!-- Education -->
@@ -227,10 +225,7 @@
       <div class="wrapper animatedSection">
         <div class="HEADINGS"><h1>PROJECTS</h1></div>
         <div class="headingsDescriptions">
-          <p>
-            Here you can learn about the projects I've worked on, ranging from
-            college projects to professional ones.
-          </p>
+          <p>Here you can learn about the projects I've worked on.</p>
         </div>
         <div id="projectsContainer"></div>
       </div>
@@ -243,8 +238,8 @@
         <div class="HEADINGS"><h1>CONTACT</h1></div>
         <div class="headingsDescriptions">
           <p>
-            If you want to collaborate or hire me, send me a message through the
-            form below.
+            Here you can contact me through the form or social media found
+            below.
           </p>
         </div>
         <br />
