--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Jadnell H. Reyes Pérez -->
-<!-- February 25th 2025 -->
+<!-- March 8th, 2025 -->
 <!-- Version: 1.5 (in progress...) -->
 <?xml version = "1.0"?>
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
@@ -26,6 +26,7 @@
     <!-- Stylesheet Link -->
     <link id="theme" href="styles/style.css" type="text/css" rel="stylesheet" />
 
+    <!-- Webpage Icon Link -->
     <link rel="icon" href="assets/images/pictures/ME.ico" type="image/x-icon" />
 
     <meta
