--- a/pages/projects/projectDetailsTemplate.html
+++ b/pages/projects/projectDetailsTemplate.html
@@ -1,5 +1,5 @@
 <!-- Jadnell H. Reyes Pérez -->
-<!-- March 3rd, 2025 -->
+<!-- March 8th, 2025 -->
 <!-- Version: 1.5 -->
 <!-- Project Details Template -->
 <?xml version = "1.0"?>
@@ -25,6 +25,7 @@
       rel="stylesheet"
     />
 
+    <!-- Webpage Icon Link -->
     <link rel="icon" href="assets/images/pictures/ME.ico" type="image/x-icon" />
 
     <meta
