Added full screen capabilities for the project images. Minor design changes and improvements

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Jadnell H. Reyes Pérez -->
 <!-- March 8th, 2025 -->
-<!-- Version: 1.5 (in progress...) -->
+<!-- Version: 1.5 -->
 <?xml version = "1.0"?>
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
