--- a/pages/projects/projectDetailsTemplate.html
+++ b/pages/projects/projectDetailsTemplate.html
@@ -1,5 +1,5 @@
 <!-- Jadnell H. Reyes Pérez -->
-<!-- March 8th, 2025 -->
+<!-- March 10th, 2025 -->
 <!-- Version: 1.5 -->
 <!-- Project Details Template -->
 <?xml version = "1.0"?>
@@ -237,6 +237,7 @@
     <!-- SCRIPTS -->
     <script src="../../scripts/modules/themeChangerButton.js"></script>
     <script src="../../scripts/modules/animationsOnScroll.js"></script>
+    <script src="../../scripts/modules/fullscreenImages.js"></script>
     <script src="../../scripts/modules/imageSlideshow.js"></script>
     <script src="../../scripts/modules/projectFetch.js"></script>
   </body>
