Added a project and all relevant information. Minor design changes and improvements

--- a/pages/projects/projectDetailsTemplate.html
+++ b/pages/projects/projectDetailsTemplate.html
@@ -133,7 +133,7 @@
             <div class="projectDetailsTitle">Status:</div>
             <div class="projectStatus">
               <div id="inProgress">In Progress</div>
-              <div id="complete">Complete</div>
+              <div id="complete">Completed</div>
             </div>
           </div>
         </div>
